fixes #180, long project descriptions no longer break media structure. Missing overflow ellipsis: see https://github.com/twbs/bootstrap/issues/15958

--- a/src/sass/projects.sass
+++ b/src/sass/projects.sass
@@ -19,6 +19,8 @@
 .project-description
   height: 1.42em
   @extend .overflow-ellipsis
+  white-space: normal
+  max-width: 70%
 .project-sections
   margin-top: 0.8em
   width: 100%
